# raspico_test

./: README.md  openocd_run.sh
blink/: CMakeLists.txt  build.sh
hello_serial/: CMakeLists.txt  build.sh  hello_serial.c
hello_usb/: CMakeLists.txt  EnableCcache.cmake  hello_usb.c
